fix radio and checkbox layout issues

--- a/sass/core/forms/_radio.scss
+++ b/sass/core/forms/_radio.scss
@@ -32,8 +32,9 @@ elements.
 	-webkit-appearance: none;
 	cursor: pointer;
 	display: inline-block;
+	font-size: $font-size;
 	height: $font-size;
-	margin: 0 $space 0 0;
+	margin: 0 $inputGutter 0 0;
 	position: relative;
 	top: 0;
 	width: $font-size;
